# mpv-remote-play

./: README.md  expo-app.code-workspace
expo-app/: app.json  package.json  tsconfig.json
expo-app/assets/data/: mock.json
expo-app/patches/: react-native-track-player.fix-on-bind.patch  react-native-track-player.patch
expo-app/src/app/: +not-found.tsx  _layout.tsx
expo-app/src/components/: connection-status.tsx  error-boundary.tsx  floating-player.tsx  loading.tsx  network-error.tsx  share-tracks-list.tsx  skeletons.tsx  track-selector-sheet.tsx  tracks-list.tsx
expo-app/src/hooks/: query-client.tsx  use-connection-stats.tsx  use-hls-playback.tsx  use-log-player-state.tsx  use-nav-search.tsx  use-player-commands.tsx  use-remote-playback-sync.tsx  use-setup-track-player.tsx  use-track-sync.tsx  use-tracks.ts
expo-app/src/lib/: queries.ts
expo-app/src/screens/: player-screen.tsx  settings-screen.tsx  share-content-screen.tsx  shares-screen.tsx
expo-app/src/services/: hls-audio.ts
expo-app/src/store/: mpv-instance.ts  playlist.ts  settings.ts
expo-app/src/styles/: index.ts
mpv-remote-server/: .gitignore  README.md  audio-test.html  config.py  hls-audio-test.html  libmpv-test.py  main.py  pyproject.toml  run.py  t.py
mpv-remote-server/models/: model.py
mpv-remote-server/services/: audio_stream.py  cache.py  hls_stream.py  mpv_manager.py  scanner.py  shares.py  thumbnails.py
server/: .gitignore  config.ts  index.ts  media-manager.ts  mpv-manager.ts  package.json  types.ts
server/src/: index.ts  types.ts
server/src/services/: cache.ts  scanner.ts  (+3 more)
(+17 files in other folders)
